Fix test failures in catalog-core-api-impl for null parameter handling
- SourceProcessingDetailsImpl: Use Validate.isTrue() instead of
  Validate.notNull() to throw IllegalArgumentException for null warnings
- SourceProcessingDetailsImplTest: Update test expectations to match
  the IllegalArgumentException behavior
- CreateRequestImpl: Use Collections.singletonList() instead of List.of()
  to allow null metacard values (List.of() rejects nulls)

All 695 tests in catalog-core-api-impl now pass.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>